--- a/workflows/daily-sync.yaml
+++ b/workflows/daily-sync.yaml
@@ -2,7 +2,7 @@ name: Daily PvP Sync
 
 on:
   schedule:
-    - cron: '- cron: '0 19 * * *'
+    - cron: 'cron: '0 19 * * *'
   workflow_dispatch:
 
 jobs:
