--- a/.github/workflows/daily-sync.yml
+++ b/.github/workflows/daily-sync.yml
@@ -35,6 +35,6 @@ jobs:
         run: |
           git config user.name "GitHub Action"
           git config user.email "action@github.com"
-          git add RatedStats/achiev/region_*.x
+          git add achiev/region_*.x
           git commit -m "Daily PvP sync update" || echo "No changes to commit"
           git push origin dev
