--- a/.github/workflows/daily-sync.yml
+++ b/.github/workflows/daily-sync.yml
@@ -21,7 +21,12 @@ jobs:
           python-version: '3.x'
 
       - name: Install dependencies
-        run: pip install requests
+        run: |
+          python -m pip install --upgrade pip
+          pip install aiohttp
+
+  - name: Run PvP sync
+    run: python sync_pvp.py
 
       - name: Debug Show full directory and files
         run: |
