--- a/.github/workflows/daily-sync.yml
+++ b/.github/workflows/daily-sync.yml
@@ -3,14 +3,20 @@ name: Daily PvP Sync
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 1 * * *'
+    - cron: '0 1 * * *'  # Run daily at 01:00 UTC
 
 jobs:
   sync:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        region: [us, eu, kr, tw]
+
     env:
       BLIZZARD_CLIENT_ID: ${{ secrets.BLIZZARD_CLIENT_ID }}
       BLIZZARD_CLIENT_SECRET: ${{ secrets.BLIZZARD_CLIENT_SECRET }}
+      REGION: ${{ matrix.region }}
 
     steps:
       - uses: actions/checkout@v3
@@ -25,18 +31,13 @@ jobs:
           python -m pip install --upgrade pip
           pip install aiohttp requests
 
-      - name: Debug Show full directory and files
-        run: |
-          echo "Working directory: $(pwd)"
-          ls -R
-
-      - name: Run PvP Sync Script
+      - name: Run PvP Sync for ${{ matrix.region }}
         run: python sync_pvp.py
 
-      - name: Commit results to dev
+      - name: Commit results
         run: |
           git config user.name "GitHub Action"
           git config user.email "action@github.com"
-          git add achiev/region_*.x
-          git commit -m "Daily PvP sync update" || echo "No changes to commit"
+          git add achiev/region_${{ matrix.region }}.x
+          git commit -m "PvP sync update for ${{ matrix.region }}" || echo "No changes to commit"
           git push origin dev
