--- a/.github/workflows/daily-sync.yml
+++ b/.github/workflows/daily-sync.yml
@@ -38,6 +38,7 @@ jobs:
         run: |
           git config user.name "GitHub Action"
           git config user.email "action@github.com"
-          git add achiev/region_${{ matrix.region }}.x
-          git commit -m "PvP sync update for ${{ matrix.region }}" || echo "No changes to commit"
+          git pull origin dev --rebase
+          git add achiev/region_*.x
+          git commit -m "PvP sync update for ${{ env.REGION }}" || echo "No changes to commit"
           git push origin dev
