--- a/.github/workflows/daily-sync.yml
+++ b/.github/workflows/daily-sync.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           git config user.name "GitHub Action"
           git config user.email "action@github.com"
-          git pull origin dev --rebase
+          git pull origin dev --rebase --autostash
           git add achiev/region_*.x
           git commit -m "PvP sync update for ${{ env.REGION }}" || echo "No changes to commit"
           git push origin dev
