--- a/.github/workflows/daily-sync.yml
+++ b/.github/workflows/daily-sync.yml
@@ -39,6 +39,6 @@ jobs:
           git config user.name "GitHub Action"
           git config user.email "action@github.com"
           git pull origin dev --rebase --autostash
-          git add achiev/region_*.x
+          git add achiev/region_*.lua
           git commit -m "PvP sync update for ${{ env.REGION }}" || echo "No changes to commit"
           git push origin dev
